[project]
name = "net-optimizer"
version = "0.1.0"
description = ""
authors = [{ name = "Israel Llorens", email = "sanchezis@hotmail.com" }]
license = "MIT OR EUPL-1.2"  # SPDX expression
readme = "README.md"
requires-python = ">=3.11,<3.14"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
]

dependencies = [

    # ⚡ Spark & Big Data
    "pyspark==3.4.4",
    "graphframes>=0.6,<0.7",
    "py4j==0.10.9.7",

    # 🔬 Ciencia de Datos
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "scipy>=1.15.2",
    "numpy>=1.26.4,<2.0.0",
    "pgmpy>=1.0.0,<2.0.0",

    # 📈 Visualización
    "seaborn>=0.13.2",
    "plotly>=6.0.1",
    
    # 🧠 Redes y grafos
    "networkx>=3.4.2",
    "gremlinpython>=3.7.3,<4.0.0",

    # 🧪 Dev y Testing
    "pytest>=8.3.5,<9.0.0",
    "nbformat>=4.2.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7,<9.0.0",

    # 🔄 Procesamiento Web y extracción
    "requests>=2.32.3,<3.0.0",
    "beautifulsoup4>=4.13.3,<5.0.0",
    "chardet>=5.2.0,<6.0.0",

    # 📡 Mensajería / Event Streaming
    "kafka-python>=2.2.10,<3.0.0",

    # 🔒 Certificados
    "certifi>=2025.1.31",
    "aiohttp (>=3.12.6,<4.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "pulp (>=3.2.1,<4.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
transformers = "4.40.0"
huggingface-hub = "0.14.1"
